[package]
name = "sc-snapshot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "sc-snapshot"
path = "src/main.rs"

[dependencies]
sc-extract  = { workspace = true }
sc-installs = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }

# Structured CLI logging for a long-running extraction.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
